tests/parser/tests/cases/should_fail/unclosed_char_literal/case.stderr
error: invalid character literal `a`, character literals may only contain one codepoint
 --> $DIR/case.hash:1:1
1 |   'a
  |   ^^^ here
